non-fixed bug with scrollbar

--- a/css/section/left-sidebar.css
+++ b/css/section/left-sidebar.css
@@ -59,8 +59,17 @@
 }
 
 .lists::-webkit-scrollbar {
-    display: none;
+    height: 0.275rem;
+    border-radius: 0.275rem;
+    box-shadow: 0 0 1px rgb(255 255 255 / 1%);
 }
+
+.lists::-webkit-scrollbar-thumb{
+    background: #3B3B3B;
+    border-radius: 0.375rem;
+}
+
+
 
 .list__amount {
     min-width: 1.25rem;
